; ModuleID = '/home/carl/AnghaBench/disque/src/extr_server.c_timeCommand.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_server.c_timeCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @timeCommand(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.timeval, align 4
  store i32* %0, i32** %2, align 8
  %4 = call i32 @gettimeofday(%struct.timeval* %3, i32* null)
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @addReplyMultiBulkLen(i32* %5, i32 2)
  %7 = load i32*, i32** %2, align 8
  %8 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @addReplyBulkLongLong(i32* %7, i32 %9)
  %11 = load i32*, i32** %2, align 8
  %12 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @addReplyBulkLongLong(i32* %11, i32 %13)
  ret void
}

declare dso_local i32 @gettimeofday(%struct.timeval*, i32*) #1

declare dso_local i32 @addReplyMultiBulkLen(i32*, i32) #1

declare dso_local i32 @addReplyBulkLongLong(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
